maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:23: error: ')' expected but '}' found.
  }
  ^ShortestPathMaze:24: error: ')' expected but '}' found.
} 
^